--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -786,11 +786,12 @@ ul.actions, ul.special_actions, ul.heroic_actions {
         img { vertical-align: middle; margin-right: 3px; }
       }
       &>ul {
-        margin: 0; padding: 0; font-size: 0;
+        margin: 0; padding: 0; font-size: 0; max-height: 300px; overflow-y: auto;
         &>li {
-          &>div { font-size: 1.2rem; }
-          list-style: none; padding: 2px; margin: 2px; display: inline-block; cursor: pointer; border: 1px solid transparent;
-          &:hover { background: saturate( @myhordes-smalltext, 30% ); border-color: darken(@myhordes-smalltext, 20%) }
+          &:not(.line) { display: inline-block; cursor: pointer; }
+          &>div { font-size: 1.2rem; display: inline-block }
+          list-style: none; padding: 2px; margin: 2px; border: 1px solid transparent;
+          &:not(.line):hover { background: saturate( @myhordes-smalltext, 30% ); border-color: darken(@myhordes-smalltext, 20%) }
         }
       }
       & *[x-close-for] { text-align: right; text-decoration: underline; cursor: pointer; }
