--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -30,7 +30,7 @@
             </div>
             {% else %}
                 <div class="padded cell rw-12 center">
-                    {{ 'Unbekannt'|trans({}, 'game')}}
+                    {{ 'Unsere aktuelle Schätzung ist zu ungenau, um brauchbar zu sein: Wir brauchen mehr Bürger, die auf den Turm gehen!'|trans({}, 'game')}}
                 </div>
             {% endif %}
         </div>
