Added links to admin dashboard to soul page as well as town and home pages (when in dev mode)

--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -170,6 +170,11 @@
                     </ul>
                 {% endif %}
 
+                {% if is_granted('ROLE_CROW') and app.environment == 'dev' %}
+                    <br />
+                    <button x-ajax-href="{{ path('admin_users_account_view', {id: owner.user.id}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</button>
+                {% endif %}
+
                 <h5>{% trans from 'game' %}Gemeinschaft{% endtrans %}</h5>
                 <ul class='gossips'>
                     {% if owner.lastActionTimestamp == 0 %}
