--- a/templates/ajax/game/town/dashboard.html.twig
+++ b/templates/ajax/game/town/dashboard.html.twig
@@ -123,7 +123,11 @@
 
             <div class="padded cell rw-6 rw-md-8 rw-sm-12">
                 <button x-ajax-href="{{ url('game_newspaper') }}">{% trans from 'game' %}Lesen Sie das Mitteilungsblatt{% endtrans %}</button>
+                {% if is_granted('ROLE_CROW') and app.environment == 'dev' %}
+                    <button x-ajax-href="{{ path('admin_town_explorer', {id: town.id, tab: null}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</button>
+                {% endif %}
             </div>
+
 
             {% if town.dayWithoutAttack > 0 and (app.user == town.creator or is_granted('ROLE_CROW')) and town.type.name == 'custom' %}
                 <h5>{{ 'Deine Stadt'|trans({}, 'game') }}</h5>
