--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -68,7 +68,10 @@
                                 {% else %}
                                     <img alt="" src="{{ asset('build/images/professions/void.gif') }}" />
                                 {% endif %}
-                                    <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/professions/death.gif') }}" />
+                                <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/professions/death.gif') }}" />
+                                {% if citizen.home.recycling >= 15 %}
+                                    <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/icons/home_recycled.gif') }}" />
+                                {% endif %}
                                 {% if citizen.hasEaten %}
                                     <div class="inline-block">
                                         <img alt="" src="{{ asset('build/images/professions/cannib.gif') }}" />
