--- a/templates/ajax/admin/users/citizen.html.twig
+++ b/templates/ajax/admin/users/citizen.html.twig
@@ -16,7 +16,7 @@
             {% embed "ajax/admin/users/tabs.html.twig" %}{% endembed %}
 
             <div class="row">
-                <div class="padded cell rw-4">
+                <div class="padded cell rw-4 rw-sm-12">
                     <h5>{{ 'Entkoppelte Leben'|trans({}, 'admin') }}</h5>
                     {% for other_life in user.citizens %}
                         {# @var other_life \App\Entity\Citizen #}
@@ -39,7 +39,7 @@
                         {% endif %}
                     {% endfor %}
                 </div>
-                <div class="cell rw-8">
+                <div class="cell rw-8 rw-sm-12">
                     <div class="row">
                         <div class="cell padded rw-12">
                             <h5>{{ 'Derzeitiges Leben'|trans({}, 'admin') }}</h5>
@@ -53,24 +53,24 @@
                         {% if active %}
                             {% if alive %}
                                 <div class="cell padded rw-3">
-                                    <button id="x-headshot">{{ 'Kopfschuss'|trans({}, 'admin') }}</button>
+                                    <button id="x-headshot"><img src="{{ asset('build/images/actions/bullets.gif') }}" alt="" /><span class="hide-md hide-sm">{{ 'Kopfschuss'|trans({}, 'admin') }}</span></button>
                                 </div>
                                 <div class="cell padded rw-3">
-                                    <button {% if not is_granted("ROLE_ADMIN") %}disabled{% endif %} x-engage="{{ path('admin_users_citizen_engage', {id: user.id, cid: 0}) }}">{{ 'Entkoppeln'|trans({}, 'admin') }}</button>
+                                    <button {% if not is_granted("ROLE_ADMIN") %}disabled{% endif %} x-engage="{{ path('admin_users_citizen_engage', {id: user.id, cid: 0}) }}"><i class="fa fa-recycle"></i> <span class="hide-md hide-sm">{{ 'Entkoppeln'|trans({}, 'admin') }}</span></button>
                                 </div>
                                 <div class="cell padded rw-3">
-                                    <button id="x-pm">{{ 'PM vom Raben'|trans({}, 'admin') }}</button>
+                                    <button id="x-pm"><i class="fa fa-edit"></i> <span class="hide-md hide-sm">{{ 'PM vom Raben'|trans({}, 'admin') }}</span></button>
                                 </div>
                                 <div class="cell padded rw-3">
-                                    <button x-ajax-href="{{ path("admin_town_explorer", {id: town.id}) }}">{{ 'Stadt ansehen'|trans({}, 'admin') }}</button>
+                                    <button x-ajax-href="{{ path("admin_town_explorer", {id: town.id}) }}"><i class="fa fa-eye"></i> <span class="hide-md hide-sm">{{ 'Stadt ansehen'|trans({}, 'admin') }}</span></button>
                                 </div>
 
                                 {% if is_granted("ROLE_ADMIN") %}
-                                    <div class="cell padded rw-6">{{ point_control() }}</div>
-                                    <div class="cell padded rw-6">{{ profession_control(citizenProfessions) }}</div>
+                                    <div class="cell padded rw-6 rw-md-12">{{ point_control() }}</div>
+                                    <div class="cell padded rw-6 rw-md-12">{{ profession_control(citizenProfessions) }}</div>
                                     <div class="cell padded rw-12">{{ teleport_control() }}</div>
-                                    <div class="cell padded rw-6">{{ status_control(citizenStati) }}</div>
-                                    <div class="cell padded rw-6">{{ role_control(citizenRoles) }}</div>
+                                    <div class="cell padded rw-6 rw-md-12">{{ status_control(citizenStati) }}</div>
+                                    <div class="cell padded rw-6 rw-md-12">{{ role_control(citizenRoles) }}</div>
                                     <div class="cell padded rw-12">{{ home_control(user_citizen,home_upgrades) }}</div>
                                 {% endif %}
                             {% else %}
