--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -143,7 +143,7 @@
                     <button x-show-reason>
                         {{ 'Anzeige erstatten'|trans({},'game') }}
                         <div class="tooltip">
-                            {{ 'Wenn du der Ansicht bist, dass sich {citizen} <strong>falsch verhalten</strong>, erstatte eine Anzeige<br />Wenn mehrere Mitspieler dies auch so sehen, kann er (sie) von der Gemeinschaft <strong>schwer bestraft</strong> werden!'|trans({"{citizen}": owner.name}, 'game')|raw }}
+                            {{ 'Wenn du der Ansicht bist, dass sich {citizen} <strong>falsch verhalten</strong>, erstatte eine Anzeige<br />Wenn mehrere Mitspieler dies auch so sehen, kann er (sie) von der Gemeinschaft <strong>schwer bestraft</strong> werden!'|trans({"{citizen}": owner}, 'game')|raw }}
                         </div>
                     </button>
                     <div class="lightbox" id="complain_reason" style="display: none";>
